[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/PlayerEntry.gd" type="Script" id=1]
[ext_resource path="res://Assets/panel.tres" type="StyleBox" id=2]
[ext_resource path="res://Assets/Images/MinPinkSheep.png" type="Texture" id=3]
[ext_resource path="res://Assets/fonts/bubblegum.tres" type="DynamicFont" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1042.0
margin_bottom = 166.0
custom_styles/panel = ExtResource( 2 )

[node name="PlayerImage" type="TextureRect" parent="Panel"]
margin_left = 10.0
margin_top = 20.0
margin_right = 500.0
margin_bottom = 500.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )
stretch_mode = 1

[node name="CheckBox" type="CheckBox" parent="Panel"]
margin_left = 165.0
margin_top = 25.0
margin_right = 24.0
margin_bottom = 24.0
rect_scale = Vector2( 5, 5 )

[node name="LineEdit" type="LineEdit" parent="Panel"]
margin_left = 275.0
margin_top = 10.0
margin_right = 1025.0
margin_bottom = 160.0
hint_tooltip = "Player Name"
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.52549, 0.509804, 0.788235, 1 )
placeholder_text = "Player Name"

[connection signal="focus_exited" from="Panel/LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="text_entered" from="Panel/LineEdit" to="." method="_on_LineEdit_text_entered"]
